[package]
name = "weekend-client"
version = "0.1.0"
authors = ["Gaurav Sehgal <dggs222@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
weekend-core = { path = "../weekend-core" }
protobuf = "2.20.0"